# auditing-verified

./: .coqdoc.d  .gitignore  Auditing.auditing.html  README.md  TODO.md  _CoqProject  auditing.v  coq-auditing-verified.opam  index.html  toc.html  todo.md
.github/workflows/: ci.yml
theories/: all.v  allocation.v  alpha_12.v  auditing.v  auditing_1.v  bravo.v  bravo_7.v  comparison_13.v  concrete.v  concrete_9.v  continuity.v  continuity_8.v  dependent.v  dependent_3.v  macro_10.v  optimal_2.v  overlap.v  overlap_5.v  plurality_3.v  probability.v  probability_4.v  shangrla_11.v  stratified_14.v  ville.v  ville_6.v
